# ale-backend

./: .env.secrets.example  .gitignore  README.md  check.py  development.env  docker-compose.ecr.yml  docker-compose.yml  local.env  oauth.md  production.env  run.sh  test.env
.circleci/: config.yml
common/: app_config.py  app_logger.py
common/constants/: content_types.py  form_names.py
common/helpers/: alert_utils.py  csv_utils.py  exceptions.py  string_utils.py
common/models/: __init__.py  alert.py  alert_person.py  availability_slot.py  care_visit.py  current_caregiver.py  current_employee.py  current_employees_file.py  employee.py  employee_exclusion_match.py  fax_template.py  file.py  form_data.py  login_method.py  oig_employees_exclusion.py  oig_exclusions_check.py  organization.py  organization_partnership.py  patient.py  patient_care_slot.py  patients_file.py  person.py  person_organization_invite.py  person_organization_role.py  phone_number.py  physician.py
common/repositories/: __init__.py  alert.py  alert_person.py  availability_slot.py  base.py  care_visit.py  current_caregiver.py  current_employee.py  current_employees_file.py  employee.py  employee_exclusion_match.py  factory.py  fax_template.py  file.py  form_data.py  oig_employees_exclusion.py  oig_exclusions_check.py  organization.py  organization_partnership.py  patient.py  patient_care_slot.py  patients_file.py  person.py  person_organization_role.py  (+3 more)
flask/: Dockerfile  docker-entrypoint.sh  logger.py  pyproject.toml
flask/app/: __init__.py
flask/app/helpers/: decorators.py  json_provider.py
flask/app/migrations/: 0000000006_0000000005_migration.py  0000000007_0000000006_migration.py  0000000008_0000000007_migration.py  0000000009_0000000008_migration.py  0000000010_0000000009_migration.py  0000000011_0000000010_migration.py  0000000012_0000000011_migration.py  0000000013_0000000012_migration.py  0000000014_0000000013_migration.py  0000000015_0000000014_migration.py  0000000016_0000000015_migration.py  0000000017_0000000016_migration.py  0000000018_0000000017_migration.py  0000000019_0000000018_migration.py  0000000020_0000000019_migration.py  0000000021_0000000020_migration.py  0000000022_0000000021_migration.py  0000000023_0000000022_migration.py  0000000024_0000000023_migration.py  0000000025_0000000024_migration.py  0000000026_0000000025_migration.py  0000000027_0000000026_migration.py  0000000028_0000000027_migration.py  0000000029_0000000028_migration.py  0000000030_0000000029_migration.py  0000000031_0000000030_migration.py  0000000032_0000000031_migration.py  0000000033_0000000032_migration.py  0000000034_0000000033_migration.py  0000000035_0000000034_migration.py  0000000036_0000000035_migration.py  0000000037_0000000036_migration.py  0000000038_0000000037_migration.py  0000000039_0000000038_migration.py  0000000040_0000000039_migration.py  0000000041_0000000040_migration.py  0000000042_0000000041_migration.py  0000000043_0000000042_migration.py  0000000044_0000000043_migration.py  0000000045_0000000044_migration.py  (+16 more)
flask/app/views/: __init__.py  alert.py  auth.py  availability_slot.py  care_visit.py  current_caregiver.py  current_employee.py  current_employees_file.py  employee.py  exclusion_match.py  fax_template.py  form_data.py  organization.py  organization_partnership.py  patient.py  patient_care_slot.py  patients_file.py  person_organization_roles.py  physician.py  version.py
services/alert_service/: Dockerfile  README.md  processor.py  pyproject.toml  version.py
services/alert_service/lib/: __init__.py  handler.py
services/employee_exclusion_match_service/: Dockerfile  README.md  processor.py  pyproject.toml
services/employee_exclusion_match_service/lib/: handler.py
services/employee_import/: Dockerfile  README.md  __init__.py  processor.py  pyproject.toml  setup.py
services/employee_import/lib/: __init__.py  current_caregiver_handler.py  current_employee_handler.py  employee_handler.py  handler.py
services/file_processor/: Dockerfile  README.md  processor.py  pyproject.toml  setup.py
services/file_processor/lib/: file_conversion.py  file_handler.py  file_utils.py  response_handler.py  textract_client.py
services/oig-update-check/: Dockerfile  README.md  processor.py  pyproject.toml
services/oig-update-check/lib/: handler.py
services/oig_verifier/: Dockerfile  README.md  processor.py  pyproject.toml
services/oig_verifier/lib/: handler.py  oig_verification_script.py
(+62 files in other folders)
