[tool.poetry]
name = "ALE Homecare Solutions"
version = "0.1.56"
description = "Flask-based API for the ALE Homecare Solutions backend"
authors = ["Jay Grieves <jaygrieves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.1"
flask-restx = "^1.3.0"
flask-cors = "^6.0.0"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
rollbar = "^1.2.0"
rococo = { version = "^1.0.36", extras = ["all"] }
pyjwt = "^2.10.1"
pika = "^1.3.2"
waitress = "^3.0.2"
toml = "^0.10.2"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
