[tool.poetry]
name = "alert_service"
version = "0.0.2"
description = "Service for processing organizational alerts"
authors = ["ALE Healthtech Team"]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.10"
rollbar = "0.16.3"
pydantic-settings = "^2.2.1"
werkzeug = "^3.0.6"
pyjwt = "^2.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
