[tool.poetry]
name = "employee_exclusion_match_service"
version = "0.0.11"
description = "Service for processing employee exclusion matches"
authors = ["ALE Healthtech Team"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.0"
beautifulsoup4 = "^4.11.0"
psycopg2-binary = "^2.9.10"
rollbar = "0.16.3"
pydantic-settings = "^2.2.1"
werkzeug = "^3.0.6"
pyjwt = "^2.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

