[tool.poetry]
name = "employee-import"
version = "0.0.3"
description = "Service for importing employee data from CSV files"
authors = ["ALE Healthtech Team"]
readme = "README.md"
packages = [{include = "employee_import"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.26.0"
certifi = "2024.7.4"
charset-normalizer = "2.1.1"
idna = "3.7"
jmespath = "1.0.1"
mailjet-rest = "1.3.4"
pika = "1.3.2"
python-dateutil = "2.8.2"
requests = "2.32.2"
rollbar = "0.16.3"
six = "1.16.0"
urllib3 = "1.26.19"
pymysql = "1.1.1"
pusher = "3.3.0"
cryptography = "43.0.1"
dbutils = "^3.0.3"
rococo = "^1.0.33"
botocore = "1.31.55"
werkzeug = "^3.0.3"
pydantic-settings = "^2.2.1"
pyjwt = "^2.10.1"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
