[tool.poetry]
name = "oig-update-check"
version = "0.0.2"
description = "OIG LEIE database update check service"
authors = ["ALE Healthtech Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.0"
beautifulsoup4 = "^4.11.0"
psycopg2-binary = "^2.9.10"
rollbar = "0.16.3"
pydantic-settings = "^2.2.1"
werkzeug = "^3.0.6"
pyjwt = "^2.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
